# CSC3060_code_optimization

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  perfUsage.md
bonus/: CMakeLists.txt
bonus/include/: graph.h
bonus/src/kernel/: bitwise.cpp  blackscholes.cpp  graph.cpp  matmul.cpp  relu.cpp
bonus/src/main/: single_bench.cpp
include/: bench.h  bitwise.h  blackscholes.h  filter_gradient.h  graph.h  grff.h  image_proc.h  matmul.h  relu.h  sparse_spmm.h  trace_replay.h
reports/: bitwise_optimization_version2.md
src/kernel/: bitwise.cpp  blackscholes.cpp  filter_gradient.cpp  graph.cpp  grff.cpp  image_proc.cpp  matmul.cpp  relu.cpp  sparse_spmm.cpp  trace_replay.cpp
src/main/: run_all.cpp  single_bench.cpp
